--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
+    "framer-motion": "^3.2.1",
+    "gsap": "^3.6.0",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
+    "react-typist": "^2.0.5",
+    "sass": "^1.32.5",
+    "scrollreveal": "^4.0.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
