--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,20 @@
     "font-awesome": "^4.7.0",
     "framer-motion": "^3.2.1",
     "gsap": "^3.6.0",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.27.14",
     "react-toastify": "^6.2.0",
     "react-typist": "^2.0.5",
     "sass": "^1.32.5",
     "scrollreveal": "^4.0.7",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
