--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "popper.js": "^1.16.1"
   }
 }
