--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
