--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.14",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^6.2.0",
     "react-typist": "^2.0.5",
     "sass": "^1.32.5",
