--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.32.5",
     "scrollreveal": "^4.0.7",
     "slick-carousel": "^1.8.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
