--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2-refresh": "^2.0.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "react-toastify": "^6.2.0",
