--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
     "gm": "^1.23.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.11.13",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
@@ -34,6 +36,7 @@
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "react-toastify": "^6.2.0",
+    "sharp": "^0.27.1",
     "stripe": "^8.132.0",
     "uuid": "^8.3.2"
   }
