--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
     "gm": "^1.23.1",
+    "instagram-nodejs-without-api": "^1.2.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "mongo-sanitize": "^1.1.0",
     "mongodb": "^3.3.3",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-instagram": "^4.3.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
