--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-transform-react-pug": "^7.0.1",
     "bootstrap": "^4.6.0",
     "chroma-js": "^2.1.0",
+    "draft-js": "^0.11.7",
     "font-awesome": "^4.7.0",
     "framer-motion": "^3.2.1",
     "gsap": "^3.6.0",
